{
  "version": 4,
  "terraform_version": "1.11.2",
  "serial": 33,
  "lineage": "c25a3ccc-c83c-64c9-4379-75b9eb0ef185",
  "resources": [
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "ak_ecs_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:222634373323:vpc/vpc-064212ae5e94c2803",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0a82e5bbf6c072da9",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-02df6aac4c492b0ed",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-064212ae5e94c2803",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-08ceaa97c284e818d",
            "owner_id": "222634373323"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "ak-ecs-task",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:222634373323:loadbalancer/app/ak-ecs-task-lb/1c874cbc59e22cfc",
            "arn_suffix": "app/ak-ecs-task-lb/1c874cbc59e22cfc",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "ak-ecs-task-lb-280593536.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:222634373323:loadbalancer/app/ak-ecs-task-lb/1c874cbc59e22cfc",
            "idle_timeout": 600,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "ak-ecs-task-lb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-074aca1946adee960"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-073e5972c393a7107"
              },
              {
                "subnet_id": "subnet-087e109d423293340"
              }
            ],
            "subnets": [
              "subnet-073e5972c393a7107",
              "subnet-087e109d423293340"
            ],
            "tags": {
              "Environment": "Test",
              "ManagedBy": "Terraform",
              "Name": "ak-ecs-task",
              "Project": "ECS Cluster Setup",
              "Team": "DevOps"
            },
            "tags_all": {
              "Environment": "Test",
              "ManagedBy": "Terraform",
              "Name": "ak-ecs-task",
              "Project": "ECS Cluster Setup",
              "Team": "DevOps"
            },
            "vpc_id": "vpc-064212ae5e94c2803",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.alb_sg",
            "data.aws_vpc.ak_ecs_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "ak-ecs-task",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:222634373323:listener/app/ak-ecs-task-lb/1c874cbc59e22cfc/fa89a2a43d1555d2",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:222634373323:targetgroup/ak-ecs-task-tg/3a70d8b7ca298795",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:222634373323:listener/app/ak-ecs-task-lb/1c874cbc59e22cfc/fa89a2a43d1555d2",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:222634373323:loadbalancer/app/ak-ecs-task-lb/1c874cbc59e22cfc",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": false,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.ak-ecs-task",
            "aws_lb_target_group.ak-ecs-task",
            "aws_security_group.alb_sg",
            "data.aws_vpc.ak_ecs_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "ak-ecs-task",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:222634373323:targetgroup/ak-ecs-task-tg/3a70d8b7ca298795",
            "arn_suffix": "targetgroup/ak-ecs-task-tg/3a70d8b7ca298795",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:222634373323:targetgroup/ak-ecs-task-tg/3a70d8b7ca298795",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:222634373323:loadbalancer/app/ak-ecs-task-lb/1c874cbc59e22cfc"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "ak-ecs-task-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Environment": "Test",
              "ManagedBy": "Terraform",
              "Name": "ak-ecs-task",
              "Project": "ECS Cluster Setup",
              "Team": "DevOps"
            },
            "tags_all": {
              "Environment": "Test",
              "ManagedBy": "Terraform",
              "Name": "ak-ecs-task",
              "Project": "ECS Cluster Setup",
              "Team": "DevOps"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-064212ae5e94c2803"
          },
          "dependencies": [
            "data.aws_vpc.ak_ecs_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:222634373323:security-group/sg-074aca1946adee960",
            "description": "Security group for the ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-074aca1946adee960",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "alb-security-group",
            "name_prefix": "",
            "owner_id": "222634373323",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "Test",
              "ManagedBy": "Terraform",
              "Name": "ak-ecs-task",
              "Project": "ECS Cluster Setup",
              "Team": "DevOps"
            },
            "tags_all": {
              "Environment": "Test",
              "ManagedBy": "Terraform",
              "Name": "ak-ecs-task",
              "Project": "ECS Cluster Setup",
              "Team": "DevOps"
            },
            "timeouts": null,
            "vpc_id": "vpc-064212ae5e94c2803"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.ak_ecs_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_tasks_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:222634373323:security-group/sg-0509dd37fc04f8a69",
            "description": "Security group for ECS tasks",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0509dd37fc04f8a69",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-074aca1946adee960"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "ecs-tasks-security-group",
            "name_prefix": "",
            "owner_id": "222634373323",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "Test",
              "ManagedBy": "Terraform",
              "Name": "ak-ecs-task",
              "Project": "ECS Cluster Setup",
              "Team": "DevOps"
            },
            "tags_all": {
              "Environment": "Test",
              "ManagedBy": "Terraform",
              "Name": "ak-ecs-task",
              "Project": "ECS Cluster Setup",
              "Team": "DevOps"
            },
            "timeouts": null,
            "vpc_id": "vpc-064212ae5e94c2803"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb_sg",
            "data.aws_vpc.ak_ecs_vpc"
          ]
        }
      ]
    }
  ]
}